crates/ruff_linter/src/rules/pygrep_hooks/snapshots/ruff_linter__rules__pygrep_hooks__tests__PGH001_PGH001_0.py.snap
---
source: crates/ruff_linter/src/rules/pygrep_hooks/mod.rs
---
PGH001_0.py:3:1: PGH001 No builtin `eval()` allowed
  |
1 | from ast import literal_eval
2 | 
3 | eval("3 + 4")
  | ^^^^ PGH001
4 | 
5 | literal_eval({1: 2})
  |

PGH001_0.py:9:5: PGH001 No builtin `eval()` allowed
  |
8 | def fn() -> None:
9 |     eval("3 + 4")
  |     ^^^^ PGH001
  |


