crates/ruff_linter/src/rules/pygrep_hooks/snapshots/ruff_linter__rules__pygrep_hooks__tests__PGH002_PGH002_1.py.snap
---
source: crates/ruff_linter/src/rules/pygrep_hooks/mod.rs
---
PGH002_1.py:4:1: PGH002 `warn` is deprecated in favor of `warning`
  |
2 | from logging import warn
3 | 
4 | logging.warn("this is not ok")
  | ^^^^^^^^^^^^ PGH002
5 | warn("not ok")
  |

PGH002_1.py:5:1: PGH002 `warn` is deprecated in favor of `warning`
  |
4 | logging.warn("this is not ok")
5 | warn("not ok")
  | ^^^^ PGH002
  |


