crates/ruff_linter/src/rules/pygrep_hooks/snapshots/ruff_linter__rules__pygrep_hooks__tests__PGH003_PGH003_0.py.snap
---
source: crates/ruff_linter/src/rules/pygrep_hooks/mod.rs
---
PGH003 Use specific rule codes when ignoring type issues
 --> PGH003_0.py:1:8
  |
1 | x = 1  # type: ignore
  |        ^^^^^^^^^^^^^^
  |

PGH003 Use specific rule codes when ignoring type issues
 --> PGH003_0.py:2:8
  |
2 | x = 1  # type:ignore
  |        ^^^^^^^^^^^^^
  |

PGH003 Use specific rule codes when ignoring type issues
 --> PGH003_0.py:3:38
  |
3 | x = 1  # type: ignore[attr-defined]  # type: ignore
  |                                      ^^^^^^^^^^^^^^
  |

PGH003 Use specific rule codes when ignoring type issues
 --> PGH003_0.py:4:25
  |
4 | x = 1  # type: ignoreme # type: ignore
  |                         ^^^^^^^^^^^^^^
  |
