crates/ruff_linter/src/rules/pygrep_hooks/snapshots/ruff_linter__rules__pygrep_hooks__tests__PGH003_PGH003_1.py.snap
---
source: crates/ruff_linter/src/rules/pygrep_hooks/mod.rs
---
PGH003 Use specific rule codes when ignoring type issues
 --> PGH003_1.py:1:8
  |
1 | x = 1  # pyright: ignore
  |        ^^^^^^^^^^^^^^^^^
  |

PGH003 Use specific rule codes when ignoring type issues
 --> PGH003_1.py:2:8
  |
2 | x = 1  # pyright:ignore
  |        ^^^^^^^^^^^^^^^^
  |

PGH003 Use specific rule codes when ignoring type issues
 --> PGH003_1.py:3:41
  |
3 | x = 1  # pyright: ignore[attr-defined]  # pyright: ignore
  |                                         ^^^^^^^^^^^^^^^^^
  |
