crates/ruff_linter/src/rules/pygrep_hooks/snapshots/ruff_linter__rules__pygrep_hooks__tests__PGH004_PGH004_1.py.snap
---
source: crates/ruff_linter/src/rules/pygrep_hooks/mod.rs
---
[PGH004]: Use specific rule codes when using `noqa`
 --> PGH004_1.py:1:1
  |
1 | #noqa
  | ^^^^^
  |
