crates/ruff_linter/src/rules/pygrep_hooks/snapshots/ruff_linter__rules__pygrep_hooks__tests__PGH004_PGH004_3.py_preview_enabled.snap
---
source: crates/ruff_linter/src/rules/pygrep_hooks/mod.rs
---
PGH004_3.py:1:1: PGH004 Use specific rule codes when using `noqa`
  |
1 | # flake8: noqa
  | ^^^^^^^^^^^^^^ PGH004
  |
